# release-manager

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
src/: agents.py  config_loader.py  main.py  policies.py  tasks.py
src/tools/: notion_tool.py
